update theme, fix content center alignment, document updates for Completionist Free v3.10.0 and Pro v1.5.0, improve shortcode attribute documentation into sectioned tables

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -24,7 +24,7 @@
     max-width: $content-width;
 
     @include mq(lg) {
-      margin-left: calc( ( 100% - #{$nav-width} - #{$content-width} ) / 2 );
+      margin-left: max(#{calc( ( 100% - #{$nav-width} - #{$content-width} ) / 2 )}, 0px);
     }
 
     .main-content {
